# safetyrouter

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  design.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
app/: main.py
docs/: 404.html  CNAME  index.html
docs/_next/static/chunks/: 0hnljz406yeqn.css  0vcvjqzkorzcb.js  11m3a-..8mhix.css
docs/_not-found/: index.html
safetyrouter/: __init__.py  classifier.py  cli.py  config.py  crisis.py  models.py  router.py  server.py
safetyrouter/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py
tests/: test_router.py
web/: README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: Changelog.tsx  Configuration.tsx  CrisisSafety.tsx  Documentation.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  InstallCTA.tsx  Nav.tsx  ProvidersStrip.tsx  RoutingTable.tsx
web/scripts/: sync-docs.mjs
